syntax = "proto3";

option java_multiple_files = true;
option java_package = "pathfinder.data.v3";

import "v3/Effect.proto";

package v3;

message ModificationDatabaseDbo {
  string database_id = 1;
  repeated ModificationSummaryDbo summaries = 2;
  repeated CategoryDbo categories = 3;
}

message CategoryDbo {
  int32 id = 1;
  string name = 2;
}

message ModificationSummaryDbo {
  string id = 1;
  string name = 2;
  string prerequisite_formula = 3;
  repeated ModificationSummaryDbo children = 4;
  string type = 5;
  int32 category_id = 6;
}

message ModificationDetailsDbo {
  string id = 1;
  string name = 2;
  string prerequisite_formula = 3;
  repeated ModificationDetailsDbo children = 4;
  string type = 5;
  int32 category_id = 6;

  string description_text = 100;
  repeated EffectDbo effects = 101;
  string benefit_text = 102;
  string normal_text = 103;
  string special_text = 104;
  string note_text = 105;
}